# aind-fip-dff

./: .gitignore  README.md  pyproject.toml
.codeocean/: datasets.json  environment.json  secrets.json
655100_2023-03-15_11-16-51.nwb/: .zattrs  .zmetadata
655100_2023-03-15_11-16-51.nwb/acquisition/FIP_falling_time/: .zattrs
655100_2023-03-15_11-16-51.nwb/acquisition/FIP_rising_time/: .zattrs
655100_2023-03-15_11-16-51.nwb/acquisition/G_1/: .zattrs
655100_2023-03-15_11-16-51.nwb/acquisition/G_2/: .zattrs
655100_2023-03-15_11-16-51.nwb/acquisition/Iso_1/: .zattrs
655100_2023-03-15_11-16-51.nwb/acquisition/Iso_2/: .zattrs
655100_2023-03-15_11-16-51.nwb/acquisition/R_1/: .zattrs
655100_2023-03-15_11-16-51.nwb/file_create_date/: 0
655100_2023-03-15_11-16-51.nwb/identifier/: 0
aind-fip-dff/utils/: nwb_dict_utils.py
code/: Untitled-Copy1.ipynb  Untitled.ipynb  __init__.py  __main__.py  aind_logging.py  comparison-Copy1.ipynb  comparison-Copy2.ipynb  comparison-Copy3.ipynb  comparison-Copy4.ipynb  comparison-Copy5.ipynb  comparison-Copy6.ipynb  comparison-Copy7.ipynb  comparison-Copy8.ipynb  comparison.ipynb  comparison.pkl  comparison3.pkl  comparison4.pkl  comparison5.pkl  comparison6.pkl  comparison7.pkl  comparison8.pkl  comparison_dff+mc.ipynb  motion_correction.ipynb  new_preprocess.py  reprocess.py  run_capsule.ipynb  run_capsule.py  util_download.py
code/utils/: __init__.py  new_preprocess.py  nwb_dict_utils.py  preprocess.py
environment/: Dockerfile
metadata/: metadata.yml
results/: codeocean_detectenv.json
(+432 files in other folders)
